--- a/app/src/main/res/layout/dialogo_calificar.xml
+++ b/app/src/main/res/layout/dialogo_calificar.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    Para una futura evaluacion a travez de puntajes
+-->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
